refactor: configuration parameters to deploy eureka-server

--- a/pom.xml
+++ b/pom.xml
@@ -2,16 +2,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.sprouts.digitalmusic.eureka</groupId>
   <artifactId>sprouts-digitalmusic-eureka</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <parent>
-  	<groupId>org.sprouts.digitalmusic</groupId>
-  	<artifactId>sprouts-digitalmusic</artifactId>
-  	<version>0.1</version>
-  </parent>
+  <version>0.1</version>
+
   <repositories>
 		<repository>
 			<id>nexus</id>
-			<url>http://nexus.sprouts-project.com:8081</url>
+			<url>http://nexus.sprouts-project.com:8081/repository/maven-releases</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
@@ -33,4 +29,10 @@
 			<url>http://nexus.sprouts-project.com:8081/repository/maven-snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
+
+	<parent>
+		<groupId>org.sprouts.digitalmusic</groupId>
+		<artifactId>sprouts-digitalmusic</artifactId>
+		<version>0.1</version>
+	</parent>
 </project>
